add static todo list

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<p>First Step to build memories</p>
 						<nav>
 							<ul>
-								<li><a href="navPage/nav.html" class="fas fa-arrow-right"><span class="label">Continue</span></a></li>
+								<li><a href="todo/todo.html" class="far fa-list-alt"><span class="label">Continue</span></a></li>
 							</ul>
 						</nav>
 					</header>
